<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1C4E9"
    android:orientation="vertical" >
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textColor="#FF8A80"
	    android:textSize="100sp"
	    android:id="@+id/msg1"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textColor="#4CAF50"
	    android:textSize="50sp"
	    android:id="@+id/msg2"/>

	<TextView
		android:id="@+id/text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/Text" />

		<Button
			android:id="@+id/turnOn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/on" />

		<Button
			android:id="@+id/turnOff"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/off" />
	<Button
		android:id="@+id/paired"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/List" />

	<Button
		android:id="@+id/search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Find" />

	<ListView
		android:id="@+id/listView1"
		android:layout_width="fill_parent"
		android:layout_height="200dp" >
	</ListView>

</LinearLayout>